Adds Glamos Walker tutorial.
Co-authored-by: devon_GKI <83094770+HNT-Hub@users.noreply.github.com>

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -71,6 +71,7 @@ The [Mappers Quickstart](/use-the-network/coverage-mapping/mappers-quickstart) g
     * [Product page](https://fiz-tech.net/search?type=tag&q=Mapper)
 * Glamos Walker
     * [Product page](https://glamos.eu/product/walker/)
+    * [Glamos Walker tutorial](https://glamos.eu/manual/)
 * RAK Wireless RAK7200 
     * [Product page](https://store.rakwireless.com/products/rak7200-lpwan-tracker?variant=29669491867693)
 
