--- a/docs/api/blockchain/chain_variables.mdx
+++ b/docs/api/blockchain/chain_variables.mdx
@@ -1,7 +1,7 @@
 ---
-id: chain-variables
+id: chain_variables
 sidebar_label: Chain Variables
-slug: /api/blockchain/chain-variables
+slug: /api/blockchain/chain_variables
 ---
 
 import Tabs from "@theme/Tabs";
