--- a/docs/api/blockchain/pending_transactions.mdx
+++ b/docs/api/blockchain/pending_transactions.mdx
@@ -1,7 +1,7 @@
 ---
-id: pending-transactions
+id: pending_transactions
 sidebar_label: Pending Transactions
-slug: /api/blockchain/pending-transactions
+slug: /api/blockchain/pending_transactions
 ---
 
 import Tabs from "@theme/Tabs";
