move docs install guide

--- a/docs/open-source/docs/installation.mdx
+++ b/docs/open-source/docs/installation.mdx
@@ -1,11 +1,11 @@
 ---
 id: installation
 hide_title: false
-sidebar_label: Installation
-slug: /open-source/installation
+sidebar_label: Installation Guide
+slug: /open-source/docs/installation
 ---
 
-# Prerequisite installation guide for docs website development
+# Helium Documentation Installation Guide
 
 ## Node.js
 
