--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -2,7 +2,7 @@
 id: open-source
 hide_title: true
 sidebar_label: Overview
-slug: /open-source/open-source
+slug: /open-source
 ---
 
 
@@ -84,5 +84,5 @@ some of the code that makes it possible.
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all
   things Helium. (You're reading them.)
   
-   - [Installation](/open-source/installation) - How to install the needed components 
+   - [Installation](/open-source/docs/installation) - How to install the needed components 
    to start helping docs development.
