fix incorrect 868 rx2 DR

--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -75,7 +75,7 @@ Also known as **US902-928**
 #### Downlink
 
 - Uplink channels 1-9 (RX1)
-- Additionally for RX2: 869.525 - SF9BW125
+- We use the default parameters: 869.525 MHz / DR0 (SF12, 125 kHz) 
 
 ### CN470
 
