--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -23,6 +23,10 @@ After the initial join takes place future rejoining of the same device will be m
 
 More information about XOR filters [here](https://engineering.helium.com/2021/07/29/console-updates-2.0.html).
 
+:::info
+For a video tutorial on adding and importing devices, check out our Tips and Tricks video [here](https://youtu.be/ntr839pqWpg).
+:::
+
 To add a device, go to **Devices** and click the **+ Add Device** icon. The Add New Device screen appears.
 
 <img
