--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -17,6 +17,10 @@ There's a number of device configurations available including:
 
 ADR and CF List settings are either enabled/disabled and applied to device or label nodes directly using the Flows Inspector. 
 
+:::info
+For a video walkthrough of configuring ADR and CF List, check out our Tips and Tricks video [here](https://youtu.be/9nlkAEI1V-Q).
+:::
+
 Alerts and Multiple Packets features provide various options which users need to initially configure and then apply to device or label nodes using the Inspector. 
 
 :::important
@@ -101,6 +105,8 @@ Alerts (email or webhooks) can be configured for a number of conditions related 
 
 User types (e.g., Administrator or Managers) can be specified to receive alerts.
 
+For a video walkthrough of how to set up Alerts in Console 2.0, check out our Tips & Tricks video [here](https://youtu.be/8zt6W_FCQcM)
+
 ### Configuring Alerts
 
 To configure alerts from the Flows workspace, select a Device/Label node or Integration node depending on the type of alert to configure and select the Inspector tab. 
@@ -121,6 +127,8 @@ To create a new one, select Create New Alert choose a name, alert type (email, w
 ## Multiple Packets
 
 Data Credits are only charged for uplinks. The Multiple Packets feature provides the ability to pay for additional packets for redundancy and location triangulation purposes. 
+
+To learn more about enabling Multiple Packets, check out our Tips and Tricks video [here](https://youtu.be/rDJcGspnq1A).
 
 **Note:** Regardless of the Multiple Packet feature setting, under certain conditions the system purchases multiple packets to help ensure successful packet transmission (these cost additional Data Credits and happen automatically). These include: initial joining of the device (up to 5 packets), downlinks that contain data payloads (up to 3 packets). These additional packets help ensure connection reliability to downlink via the Hotspot with the strongest connection.
 ### Configuring Multiple Packets
