--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -22,6 +22,8 @@ are already available for a wide variety of devices.
 
 In addition, to providing a custom decoder a growing list of community-created functions can be found [here](https://github.com/helium/console-decoders). 
 
+For more information on how to create and attach functions, check out our Tips and Tricks video [here](https://youtu.be/UNUOLbIKXww).
+
 
 ## A Primer on Encoding and Decoding
 
