--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -11,6 +11,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 Integrations enable devices to connect to pre-configured, cloud-based
 applications or send data directly over HTTP or MQTT.
 
+For a video walkthrough of how to use Integrations, check out our Tips and Tricks video [here](https://youtu.be/lnERw1f7TGE).
+
 ## Add Integration
 
 To add a new integration, navigate to the **Integrations** page using the left
