--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -24,6 +24,7 @@ Console is available as a free to use hosted application at [console.helium.com]
 Learn more about how to get started using Console with our Tips and Tricks videos [here](https://www.youtube.com/playlist?list=PLtKQNefsR5zNjWkXqdRXeBbSmYWRJFCuo).
 
 * [Console Quickstart](/use-the-network/console/quickstart)
+* [Coverage (**New!**)](/use-the-network/console/coverage)
 * [Flows (**New!**)](/use-the-network/console/flows)
 * [Users and Organizations](/use-the-network/console/users)
 * [Data Credits](/use-the-network/console/data-credits)
