--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -18,7 +18,7 @@ This Console quickstart guide will cover how to:
 :::info 
 The cost per packet is $0.00001 USD \(24 byte packets\) which is
 equivalent to 1 Data Credit \(DC\). For more information please go
-[here](https://github.com/helium/devdocs/tree/861823eb00b0643fe6ca03067de7fe9409dce149/longfi/data-credits/README.md).
+[here](https://docs.helium.com/use-the-network/console/data-credits/).
 :::
 
 ## Create an account
