--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -142,6 +142,9 @@ earning for data transfered!
     specified as a Helium-Compatible Kerlink Miner.
 - [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4](/mine-hnt/data-only-guides/rak-concentrators)
   - This setup will only mine HNT as a Data Only Hotspot.
+- [Balena Data Only Hotspot running Raspberry Pi 0, 2, 3 or 4 with RAK Concentrator (RAK2287)](/mine-hnt/data-only-guides/balena-data-only-hotspot)
+  - This setup based on Nebra will only mine HNT as a Data Only Hotspot, when possible.
+
 
 :::info
 
