--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -1,6 +1,6 @@
 ---
 id: balena-data-only-hotspot
-title: Data Only Hotspot with balnea + Raspberry Pi + RAK Concentrator RAK2287
+title: Data Only Hotspot with balena + Raspberry Pi + RAK Concentrator RAK2287
 sidebar_label: balena.io + Raspberry Pi + RAK Concentrators (RAK2287)
 slug: /mine-hnt/data-only-guides/balena-data-only-hotspot
 ---
@@ -8,7 +8,7 @@ slug: /mine-hnt/data-only-guides/balena-data-only-hotspot
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-A Data Only Hotspot is a variation of Hotspots that can participate on the
+A Data Only Hotspot is asol variation of Hotspots that can participate on the
 Helium Network by transferring data from the end devices (LoRaWAN nodes). The
 Data Only Hotspots are eligible for Network Data Transfer Rewards but not Proof 
 of Coverage Rewards.
