--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -8,7 +8,7 @@ slug: /mine-hnt/data-only-guides/balena-data-only-hotspot
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-A Data Only Hotspot is asol variation of Hotspots that can participate on the
+A Data Only Hotspot is a type of Hotspot that participates on the
 Helium Network by transferring data from the end devices (LoRaWAN nodes). The
 Data Only Hotspots are eligible for Network Data Transfer Rewards but not Proof 
 of Coverage Rewards.
