--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -10,6 +10,11 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Unlike Hotspot monitoring tools focused on maximizing mining rewards, Coverage is built for users of the network who want to have more visibility about which Hotspots are transferring device packets as well as seeing the status of those Hotspots all from within Console.
 
+:::info
+To learn more about Coverage in Console, check out our Tips & Tricks video [here](https://youtu.be/Woh4RooY6L8).
+
+:::
+
 ## Identify Hotspots that hear devices
 Coverage makes it easy to identify which Hotspots have transferred an organization’s device packets. The `Coverage Breakdown` list is automatically populated with Hotspots that have sent traffic in the last 24 hrs for devices belonging to the Organization. 
 
