resolves @kent-wiliams comments

--- a/docs/mine-hnt/miner-cli/authorize.mdx
+++ b/docs/mine-hnt/miner-cli/authorize.mdx
@@ -1,8 +1,8 @@
 ---
-id: minercli-dkg
-sidebar_label: dkg
+id: minercli-authorize
+sidebar_label: authorize
 hide_title: true
-slug: /cli/dkg
+slug: /mine-hnt/miner-cli/authorize
 ---
 
 import Tabs from "@theme/Tabs";
@@ -10,7 +10,7 @@ import TabItem from "@theme/TabItem";
 
 ---
 
-# dkg Commands
+# Snapshot Commands
 
 ## Listen
 
@@ -178,13 +178,9 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 </Tabs>
 
 
+
 ```
 
-Usage: miner dkg commands
-
-  dkg status           - Display dkg status.
-  dkg queue            - Display dkg queue.
-  dkg running          - Display the running dkg group on a non-dkg mode.
-  dkg next             - Display the next block at which an election will take place.
+Missing Miner Authorize
 
 ```
