--- a/docs/mine-hnt/miner-cli/genesis.mdx
+++ b/docs/mine-hnt/miner-cli/genesis.mdx
@@ -1,8 +1,8 @@
 ---
-id: minercli-hbbft
-sidebar_label: HBBFT
+id: minercli-genesis
+sidebar_label: genesis
 hide_title: true
-slug: /cli/hbbft
+slug: /mine-hnt/miner-cli/genesis
 ---
 
 import Tabs from "@theme/Tabs";
@@ -10,7 +10,7 @@ import TabItem from "@theme/TabItem";
 
 ---
 
-# hbbft Commands
+# Genesis Commands
 
 ## Listen
 
@@ -177,7 +177,10 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 </TabItem>
 </Tabs>
 
+
+
 ```
+
 Usage: miner hbbft commands
 
   hbbft status           - Display hbbft status.
@@ -185,5 +188,6 @@ Usage: miner hbbft commands
   hbbft skip             - Skip current hbbft round.
   hbbft group            - Display current hbbfr group.
   hbbft perf             - Show performance of current group members.
+
 
 ```
