--- a/docs/mine-hnt/miner-cli/info.mdx
+++ b/docs/mine-hnt/miner-cli/info.mdx
@@ -2,7 +2,7 @@
 id: minercli-info
 sidebar_label: info
 hide_title: true
-slug: /cli/info
+slug: /mine-hnt/miner-cli/info
 ---
 
 import Tabs from "@theme/Tabs";
