--- a/docs/mine-hnt/miner-cli/minercli.mdx
+++ b/docs/mine-hnt/miner-cli/minercli.mdx
@@ -1,8 +1,8 @@
 ---
 id: minercli
-sidebar_label: miner CLI
+sidebar_label: Miner CLI
 hide_title: true
-slug: /cli/minercli
+slug: /mine-hnt/miner-cli/minercli
 ---
 
 import Tabs from "@theme/Tabs";
@@ -42,7 +42,7 @@ import TabItem from "@theme/TabItem";
 
 ## genesis
 
-For additional details click [here](/cli/genesis)
+For additional details click [here](/mine-hnt/miner-cli/genesis)
 
 ```
 Usage: miner genesis commands
@@ -57,7 +57,7 @@ Usage: miner genesis commands
 
 ## hbbft
 
-For addtional details click [here](/cli/hbbft)
+For addtional details click [here](/mine-hnt/miner-cli/hbbft)
 
 ```
 
@@ -73,7 +73,7 @@ Usage: miner hbbft commands
 
 ## peer
 
-For addtional details click [here](/cli/peer)
+For addtional details click [here](/mine-hnt/miner-cli/peer)
 
 ```
 Usage: blockchain peer commands
@@ -92,7 +92,7 @@ Usage: blockchain peer commands
 
 ## snapshot
 
-For addtional details click [here](/cli/snapshot)
+For addtional details click [here](/mine-hnt/miner-cli/snapshot)
 
 ```
 Usage: blockchain snapshot commands
@@ -107,7 +107,7 @@ Usage: blockchain snapshot commands
 
 ## ledger
 
-For addtional details click [here](/cli/ledger)
+For addtional details click [here](/mine-hnt/miner-cli/ledger)
 
 ```
 Usage: blockchain ledger commands
@@ -120,7 +120,7 @@ Usage: blockchain ledger commands
 
 ## info
 
-For addtional details click [here](/cli/info)
+For addtional details click [here](/mine-hnt/miner-cli/info)
 
 ```
 Usage: miner info commands
@@ -137,7 +137,7 @@ Usage: miner info commands
 
 ## trace
 
-For addtional details click [here](/cli/trace)
+For addtional details click [here](/mine-hnt/miner-cli/trace)
 
 ```
 Usage: blockchain trace commands
@@ -148,7 +148,7 @@ Usage: blockchain trace commands
 
 ## txn
 
-For addtional details click [here](/cli/txn)
+For addtional details click [here](/mine-hnt/miner-cli/txn)
 
 ```
 Usage: blockchain txn commands
@@ -159,7 +159,7 @@ Usage: blockchain txn commands
 ```
 ## dkg 
 
-For addtional details click [here](/cli/dkg)
+For addtional details click [here](/mine-hnt/miner-cli/dkg)
 
 ```
 Usage: miner dkg commands
@@ -172,13 +172,13 @@ Usage: miner dkg commands
 
 ## authorize
 
-For addtional details click [here](/cli/authorize)
+For addtional details click [here](/mine-hnt/miner-cli/authorize)
 
 Missing in CLI help
 
 ## repair
 
-For addtional details click [here](/cli/repair)
+For addtional details click [here](/mine-hnt/miner-cli/repair)
 
 ```
 Usage: blockchain repair commands
@@ -193,7 +193,7 @@ Usage: blockchain repair commands
 
 ## print_keys
 
-For addtional details click [here](/cli/print_keys)
+For addtional details click [here](/mine-hnt/miner-cli/print_keys)
 
 Missing in CLI help
 
