--- a/docs/mine-hnt/miner-cli/peer.mdx
+++ b/docs/mine-hnt/miner-cli/peer.mdx
@@ -2,7 +2,7 @@
 id: minercli-peer
 sidebar_label: peer
 hide_title: true
-slug: /cli/peer
+slug: /mine-hnt/miner-cli/peer
 ---
 
 import Tabs from "@theme/Tabs";
