--- a/docs/mine-hnt/miner-cli/snapshot.mdx
+++ b/docs/mine-hnt/miner-cli/snapshot.mdx
@@ -1,8 +1,8 @@
 ---
-id: minercli-authorize
-sidebar_label: authorize
+id: minercli-snapshot
+sidebar_label: snapshot
 hide_title: true
-slug: /cli/authorize
+slug: /mine-hnt/miner-cli/snapshot
 ---
 
 import Tabs from "@theme/Tabs";
@@ -181,6 +181,13 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 
 ```
 
-Missing Miner Authorize
+Usage: blockchain snapshot commands
+
+  snapshot take   - Take a snapshot at the current ledger height.
+  snapshot load   - Load a snapshot from a file.
+  snapshot grab   - Attempt to grab a snapshot from a connected peer.
+  snapshot diff   - Load two snapshots from files and find changes.
+  snapshot info   - Show information about a snapshot in a file.
+  snapshot list   - Show information about the last 5 snapshots.
 
 ```
