--- a/docs/mine-hnt/miner-cli/trace.mdx
+++ b/docs/mine-hnt/miner-cli/trace.mdx
@@ -1,8 +1,8 @@
 ---
-id: minercli-ledger
-sidebar_label: ledger
+id: minercli-trace
+sidebar_label: trace
 hide_title: true
-slug: /cli/ledger
+slug: /mine-hnt/miner-cli/trace
 ---
 
 import Tabs from "@theme/Tabs";
@@ -10,7 +10,7 @@ import TabItem from "@theme/TabItem";
 
 ---
 
-# Ledger Commands
+# Snapshot Commands
 
 ## Listen
 
@@ -179,13 +179,12 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 
 
 
+
 ```
 
-Usage: blockchain ledger commands
+Usage: blockchain trace commands
 
-  ledger balance             - Get the balance for one or all addresses.
-  ledger export              - Export transactions from the ledger to <file>.
-  ledger gateways            - Display the list of active gateways.
-  ledger variables           - Interact with chain variables.
+  trace start   - Start a trace for a given filter and level.
+  trace clear   - Clears all installed traces.
 
 ```
