--- a/docs/mine-hnt/miner-cli/ledger.mdx
+++ b/docs/mine-hnt/miner-cli/ledger.mdx
@@ -1,8 +1,8 @@
 ---
-id: minercli-print_keys
-sidebar_label: print_keys
+id: minercli-ledger
+sidebar_label: ledger
 hide_title: true
-slug: /cli/print_keys
+slug: /mine-hnt/miner-cli/ledger
 ---
 
 import Tabs from "@theme/Tabs";
@@ -10,7 +10,7 @@ import TabItem from "@theme/TabItem";
 
 ---
 
-# Print_keys Commands
+# Ledger Commands
 
 ## Listen
 
@@ -177,7 +177,15 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 </TabItem>
 </Tabs>
 
+
+
 ```
-Missing Miner print_keys
+
+Usage: blockchain ledger commands
+
+  ledger balance             - Get the balance for one or all addresses.
+  ledger export              - Export transactions from the ledger to <file>.
+  ledger gateways            - Display the list of active gateways.
+  ledger variables           - Interact with chain variables.
 
 ```
