--- a/docs/mine-hnt/miner-cli/print_keys.mdx
+++ b/docs/mine-hnt/miner-cli/print_keys.mdx
@@ -1,8 +1,8 @@
 ---
-id: minercli-genesis
-sidebar_label: genesis
+id: minercli-print_keys
+sidebar_label: print_keys
 hide_title: true
-slug: /cli/genesis
+slug: /mine-hnt/miner-cli/print_keys
 ---
 
 import Tabs from "@theme/Tabs";
@@ -10,7 +10,7 @@ import TabItem from "@theme/TabItem";
 
 ---
 
-# Genesis Commands
+# Print_keys Commands
 
 ## Listen
 
@@ -177,17 +177,7 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 </TabItem>
 </Tabs>
 
-
-
 ```
-
-Usage: miner hbbft commands
-
-  hbbft status           - Display hbbft status.
-  hbbft queue            - Display hbbft message queue.
-  hbbft skip             - Skip current hbbft round.
-  hbbft group            - Display current hbbfr group.
-  hbbft perf             - Show performance of current group members.
-
+Missing Miner print_keys
 
 ```
