--- a/docs/mine-hnt/miner-cli/repair.mdx
+++ b/docs/mine-hnt/miner-cli/repair.mdx
@@ -1,8 +1,7 @@
 ---
-id: minercli-txn
-sidebar_label: txn
-hide_title: true
-slug: /cli/txn
+id: minercli-repair
+sidebar_label: repair
+slug: /mine-hnt/miner-cli/repair
 ---
 
 import Tabs from "@theme/Tabs";
@@ -10,7 +9,7 @@ import TabItem from "@theme/TabItem";
 
 ---
 
-# txn Commands
+# Repair Commands
 
 ## Listen
 
@@ -179,12 +178,121 @@ Pinged "/p2p/1122JkNQU4FcV6e1vCHUdP3usnE5fXdAA4FQuNpHQwdo1ecp2kHE" successfully 
 
 
 
+
 ```
+---
+
+  foreground              Start release with output to stdout
+  remote_console          Connect remote shell to running node
+  rpc [Mod [Fun [Args]]]] Run apply(Mod, Fun, Args) on running node
+  eval [Exprs]            Run expressions on running node
+  stop                    Stop the running node
+  restart                 Restart the applications but not the VM
+  reboot                  Reboot the entire VM
+  pid                     Print the PID of the OS process
+  ping                    Print pong if the node is alive
+  console                 Start the release with an interactive shell
+  console_clean           Start an interactive shell without the release's applications
+  console_boot [File]     Start an interactive shell for boot script [File]
+  daemon                  Start release in the background with run_erl (named pipes)
+  daemon_boot [File]      Start boot script [File] in the background with run_erl (named pipes)
+  daemon_attach           Connect to node started as daemon with to_erl (named pipes)
+  upgrade [Version]       Upgrade the running release to a new version
+  downgrade [Version]     Downgrade the running release to a new version
+  install [Version]       Install a release
+  uninstall [Version]     Uninstall a release
+  unpack [Version]        Unpack a release tarball
+  versions                Print versions of the release available
+  escript                 Run an escript in the same environment as the release
+  status                  Verify node is running and then run status hook scripts
+  genesis|hbbft|peer|snapshot|ledger|info|trace|txn|dkg|authorize|repair|print_keys
+
+
+Usage: miner genesis commands
+
+  genesis create <old_genesis_file> <pubkey> <proof> <addrs>  - Create genesis block keeping old ledger transactions.
+  genesis forge <pubkey> <key_proof> <addrs>                  - Create genesis block from scratch just with the addresses.
+  genesis load <genesis_file>                                 - Load genesis block from file.
+  genesis export <path>                                       - Write genesis block to a file.
+  genesis key                                                 - create a keypair for use as a master key
+  genesis proof <privkey>                                     - create a key proof for adding a master key to the genesis block
+
+Usage: miner hbbft commands
+
+  hbbft status           - Display hbbft status.
+  hbbft queue            - Display hbbft message queue.
+  hbbft skip             - Skip current hbbft round.
+  hbbft group            - Display current hbbfr group.
+  hbbft perf             - Show performance of current group members.
+
+Usage: blockchain peer commands
+
+  peer listen            - Display the addresses this node is listening on.
+  peer session           - Display the nodes this node is connected to.
+  peer ping              - Ping the peer over an established or new session.
+  peer connect           - Connnect this node to another node.
+  peer disconnect        - Disconnect from a connected peer.
+  peer addr              - Display the p2p address of this node.
+  peer book              - Display information from the peerbook of this node.
+  peer gossip_peers      - Display gossip peers of this node.
+  peer refresh           - command an updated peerbook for this peer from our gossip peers.
+  peer relay_reset       - Stop the current libp2p relay swarm and retry.
+
+Usage: blockchain snapshot commands
+
+  snapshot take   - Take a snapshot at the current ledger height.
+  snapshot load   - Load a snapshot from a file.
+  snapshot grab   - Attempt to grab a snapshot from a connected peer.
+  snapshot diff   - Load two snapshots from files and find changes.
+  snapshot info   - Show information about a snapshot in a file.
+  snapshot list   - Show information about the last 5 snapshots.
+
+Usage: blockchain ledger commands
+
+  ledger balance             - Get the balance for one or all addresses.
+  ledger export              - Export transactions from the ledger to <file>.
+  ledger gateways            - Display the list of active gateways.
+  ledger variables           - Interact with chain variables.
+
+Usage: miner info commands
+
+  info height            - Get height of the blockchain for this miner.
+  info in_consensus      - Show if this miner is in the consensus_group.
+  info name              - Shows the name of this miner.
+  info block_age         - Get age of the latest block in the chain, in seconds.
+  info p2p_status        - Shows key peer connectivity status of this miner.
+  info onboarding        - Get manufacturing and staking details for this miner.
+  info summary           - Get a collection of key data points for this miner.
+  info region            - Get the operatating region for this miner.
+
+Usage: blockchain trace commands
+
+  trace start   - Start a trace for a given filter and level.
+  trace clear   - Clears all installed traces.
 
 Usage: blockchain txn commands
 
   txn queue             - Show enqueued transactions in the txn_queue.
   txn add_gateway       - Create an add gateway transaction.
   txn assert_location   - Create an assert location transaction.
+
+Usage: miner dkg commands
+
+  dkg status           - Display dkg status.
+  dkg queue            - Display dkg queue.
+  dkg running          - Display the running dkg group on a non-dkg mode.
+  dkg next             - Display the next block at which an election will take place.
+
+Missing Miner Authorise
+Missing Miner 
+
+Usage: blockchain repair commands
+
+  repair sync_pause     - Temporarily pause transaction sync
+  repair sync_cancel    - Cancel any in-progress transaction sync.
+  repair sync_resume    - Resume any paused transaction sync.
+  repair sync_state     - Show current sync state.
+  repair analyze        - Display errors in the current blockchain state.
+  repair repair         - Attempt to repair errors in blockchain state.
 
 ```
