--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -224,26 +224,22 @@ Now that you have your Validator running, you need to [actually Stake tokens to 
 
 ### Deploy Miner from Source
 
-Ok, brave soul. Here's what you'll need to build and deploy the miner from source:
+Ok, brave soul. All of the information here can and will change but this document should help you get across the finish line. Here's what you'll need to build and deploy the miner from source:
 
-- miner
+- helium miner
 - Erlang package (the latest 22 or 23 versions are supported, the 24 release candidate will NOT work)
 - `libwxgtk` package
 - git
 
-Before we get started, make sure you're fully up to date:
+> Before we get started, make sure you're fully up to date:
 
 ```
 sudo apt-get update -y
 ```
 
-Next, let's install all the things. Start by cloning the `miner` repo on GitHub:
+#### Next, let's install all the things. 
 
-```
-git clone https://github.com/helium/miner.git
-```
-
-Then proceed to get you some Erlang (here we're specifying `22.3.1`):
+Get you some Erlang (here we're specifying `22.3.1`):
 
 ```
 wget https://packages.erlang-solutions.com/erlang/debian/pool/esl-erlang_22.3.1-1~ubuntu~bionic_amd64.deb
@@ -278,6 +274,19 @@ sudo dpkg -i esl-erlang_22.3.1-1~ubuntu~bionic_amd64.deb
 sudo apt-get install -f
 ```
 
+
+Clone the `miner` repo on GitHub
+```
+git clone https://github.com/helium/miner.git
+```
+
+You should likely checkout a tagged version of the validator
+```bash 
+#for example
+git fetch
+git checkout validator1.x.x 
+```
+
 Then navigate to your `miner` directory:
 
 ```
@@ -287,13 +296,21 @@ cd miner
 Build the `miner`
 
 ```
-./rebar3 as validator release
+./rebar3 as validator do release -n miner -v 1.x.x
 ```
+> Go get a cup of coffee and wait for the build to finish. 
 
-Then start the `miner`:
+
+Start the `miner`:
 
 ```
 _build/validator/rel/miner/bin/miner start
+```
+
+Build the `miner as a tar package`
+
+```
+./rebar3 as validator do tar -n miner -v 1.x.x
 ```
 
 #### Load the Genesis Block
