expanded api val activity counts (#605)
* expanded api val activity counts

* updated response note so it matches response output better

Co-authored-by: jkowalcz <git@kowalczyk.org>

--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6471,14 +6471,43 @@ _Query Parameters_
 
 200: OK
 
-Fetch counts with `filter_types=validator_heartbeat_v1` for validator
-`1Z7GHfLgGUfnKCnEfZEUUqaPSo4674XyX6SA3ZY93rkSTzm9ALK`
+Fetch counts for validator `1Z7GHfLgGUfnKCnEfZEUUqaPSo4674XyX6SA3ZY93rkSTzm9ALK`
 
 ```json
 {
-  "data": {
-    "validator_heartbeat_v1": 5280
-  }
+	"data": {
+		"vars_v1": 0,
+		"validator_heartbeat_v1": 812,
+		"unstake_validator_v1": 0,
+		"transfer_validator_stake_v1": 0,
+		"transfer_hotspot_v1": 0,
+		"token_burn_v1": 0,
+		"token_burn_exchange_rate_v1": 0,
+		"state_channel_open_v1": 0,
+		"state_channel_close_v1": 0,
+		"stake_validator_v1": 1,
+		"security_exchange_v1": 0,
+		"security_coinbase_v1": 0,
+		"routing_v1": 0,
+		"rewards_v2": 51,
+		"rewards_v1": 0,
+		"redeem_htlc_v1": 0,
+		"price_oracle_v1": 0,
+		"poc_request_v1": 0,
+		"poc_receipts_v1": 0,
+		"payment_v2": 0,
+		"payment_v1": 0,
+		"oui_v1": 0,
+		"gen_gateway_v1": 0,
+		"dc_coinbase_v1": 0,
+		"create_htlc_v1": 0,
+		"consensus_group_v1": 0,
+		"consensus_group_failure_v1": 0,
+		"coinbase_v1": 0,
+		"assert_location_v2": 0,
+		"assert_location_v1": 0,
+		"add_gateway_v1": 0
+	}
 }
 ```
 
