Conform to "-" instead of "_" for document URLs
Some URLs have - for spaces and some for _ so making them the standardized "-".

--- a/docs/api/blockchain/assert-locations.mdx
+++ b/docs/api/blockchain/assert-locations.mdx
@@ -1,7 +1,7 @@
 ---
-id: assert_locations
+id: assert-locations
 sidebar_label: Assert Locations
-slug: /api/blockchain/assert_locations
+slug: /api/blockchain/assert-locations
 ---
 
 import Tabs from "@theme/Tabs";
