Conform to "-" instead of "_" for document URLs
Some URLs have - for spaces and some for _ so making them the standardized "-".

--- a/docs/api/blockchain/state-channels.mdx
+++ b/docs/api/blockchain/state-channels.mdx
@@ -1,7 +1,7 @@
 ---
-id: state_channels
+id: state-channels
 sidebar_label: State Channels
-slug: /api/blockchain/state_channels
+slug: /api/blockchain/state-channels
 ---
 
 import Tabs from "@theme/Tabs";
