--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -58,12 +58,14 @@ Let's take a look at how challenges actually happen.
 POC Challenges involve three distinct roles:
 
 1. **Challenger** - The Hotspot that constructs and issues the POC Challenge. Hotspots issue
-challenges approximately once per every 300 blocks.**
+challenges approximately once per every 240 blocks. (See note below)
 2. **Transmitter** - Sometimes called "Challengee". This Hotspot is the target of the POC 
 challenge and is responsible for transmitting (or "beaconing") challenge packets to potentially be witnessed by 
 geographically proximate Hotspots.
 3. ** Witness** - Hotspots that are geographically proximate to the Transmitter and report the existence of the 
 challenge packet after it has been transmitted. 
+
+(Note: The goal is to reduce the PoC Interval to 200 blocks or lower)
 
 
 ### Challenge Proof Construction and Target Selection
