--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -39,6 +39,8 @@ Node elements (devices, labels, integrations) need to be created before they're 
 
 [MQTT](/use-the-network/console/integrations/mqtt)
 
+[Microsoft Azure IoT Hub](/use-the-network/console/integrations/azure)
+
 [AWS IoT Core](/use-the-network/console/integrations/aws-iot-core)
 
 [Cargo](/use-the-network/console/integrations/cargo)
