Two small formatting bugs
Fixes heading level and formatting for the fully preconfigured device.

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -21,7 +21,7 @@ Join the Mappers [newsletter](https://www.helium.com/mappers) to stay up to date
 
 ## Frequently Asked Questions
 
-#### How does Mappers work?
+### How does Mappers work?
 Participants use low cost LoRaWAN devices to survey the real-world network created by Helium. Many contributors bring their mapper with them when they walk, hike, bike, drive or even boat! They’re small and fit well in a pocket or on a car dash. Some have set up their mappers so they’re contributing to the coverage map every time they take a drive.
 
 In order to place a mark on the map, the mapper device sends out a signal with a GPS location encoded. If a Helium Hotspot ‘hears’ that signal, data is passed through the internet and recorded in the Mappers database. The Mappers database uses the GPS information from the Mapper to ‘light up’ the hex on the map.
@@ -56,7 +56,8 @@ There are a wide variety of ways to get involved depending on your level of comf
 
 ### Fully Preconfigured
 Fully managed mapping devices are ready to go as soon as they arrive.
-* [IoWe](https://www.internetofwe.net/product-page/helium-coverage-mapper)
+* IoWe Coverage Mapper
+    * [Product page](https://www.internetofwe.net/product-page/helium-coverage-mapper)
 
 ### Plug & Play
 Console-ready device that you onboard to spend your own Data Credits.
