--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -300,7 +300,7 @@ Also known as **US902-928**
 |Kiribati                                    |              |
 |Kosovo                                      |              |
 |Kuwait                                      |EU868         |
-|Kyrgyzstan                                  |              |
+|Kyrgyzstan                                  |EU868         |
 
 #### L <a id="l"></a>
 |Country                                     |Frequency Plan|
