Stub out Mappers Roadmap

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -16,8 +16,10 @@ View Mappers data at [mappers.helium.com](https://mappers.helium.com/). The Mapp
 Be sure to check out the ongoing conversation in the dedicated `#mappers` channel on the [Helium Discord Server](https://discord.gg/helium).
 
 ## Mappers Newsletter
-
 Join the Mappers [newsletter](https://www.helium.com/mappers) to stay up to date on new and upcoming features.
+
+## Project Roadmap
+Take a look at the big picture in the [Mappers Roadmap](/use-the-network/coverage-mapping/mappers-roadmap). The roadmap is a great way to understand the full scope of the project and find an area to make your own contributions to the project.
 
 ## Frequently Asked Questions
 
