--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -17,7 +17,7 @@ and timeline are listed below.
 
 :::warning
 
-This project is in progress and subject to change.
+This project is in progress and subject to change. Last updated Monday September 27, 2021.
 
 :::
 
@@ -37,12 +37,12 @@ entirely on the physical Hotspot itself. As the blockchain network grows, each
 Hotspot running a full node undergoes increasing load and are starting to fall
 out of sync due to the higher compute requirements.
 
-To mitigate this, the **Hotspot's consensus work will be moved off of physical
-Hotspots and onto Validators**. This will simplify the architecture and enable
+To mitigate this, the **Hotspot's consensus work has been moved off of physical
+Hotspots and onto Validators as of July 8, 2021**. This simplifies the architecture and enables
 us to grow the Network exponentially while keeping blocktimes and epochs stable.
 
 As all approved Hotspots transition to a Light Hotspot architecture, we also
-introduce a new type of Hotspot known as Data Only Hotspots to satisfy the
+introduce a new type of Hotspot known as Data Only Hotspots (activated as of July 20, 2021) to satisfy the
 increasing demand and continue to expand network coverage.
 
 ## Light Hotspot Properties
@@ -58,9 +58,10 @@ satisfy the following properties:
   behalf);
 - Does not participate in Consensus Groups (relies on Validators for block
   production);
-- Will be eligible to earn $HNT(see table below)
+- Will no longer depend on libp2p or "gossip", and instead use [gRPC](https://grpc.io/), a new framework to communicate between distributed systems;
+- Will be eligible to earn $HNT (see table below)
 
-In other words, the client will allow the hotspot to participate as a
+In other words, the client will allow the Hotspot to participate as a
 [Full Hotspot](/mine-hnt/full-hotspots), without the extra overhead of maintaining a local copy
 of the blockchain.
 
@@ -127,15 +128,28 @@ earn $HNT.
 - **Status: Development In Progress**
 
 Data Only Hotspots will earn $HNT for device data transfer.
+- server side updates for state_channels (complete)
+- gateway-rs will use a new rust-based state_channel client (in progress)
+- expected completion to be mid-October 2021
+
+#### Path to Milestone 3 and Milestone 4
+Developing in parallel with Milestone 2, the following work is also under development.
+
+- Change how Hotspots route data packets by replacing its state_channel client from erlang to rust, taking advantange of the improvements in gRPC and data streaming (in progress)
+- Update how Hotspots receive, emit, and acknowledge proof-of-coverage receipts from erlang to rust (in progress, targets milestone 4)
+- Implement the work to move Challenge creation to Validators from Hotspots, to be gated behind a chain variable (HIP in progress)
+- Activate the chain variable to move Challenge creation to Validators (to be announced)
+  - At this point, existing Hotspots no longer need to sync or absorb the blockchain, and will satisfy another property of Light Hotspot
+  - Hotspots existing on-chain will be able to participate in Proof-of-Coverage, no longer need to syncronize the blockchain, and will require less computational power (Milestone 4)
 
 ### Milestone 3
 
 #### Introduction of Light Hotspots
 
-- **Target Completion: Post Milestone 2**
-- **Status: NOT YET STARTED**
+- **Target Completion: Q1 2022**
+- **Status: Development in Progress/PoC work started**
 
-At this point, Approved Hotspots from
+Approved Hotspots from
 [HIP19-approved manufacturers](/mine-hnt/full-hotspots/#approved-makers) with
 lower compute requirements can be added to the network and participate in PoC.
 
@@ -154,12 +168,14 @@ At this stage, there will be three types of Hotspots:
 
 #### All Approved Hotspots Operate as Light Hotspots
 
-- **Target Completion: Post Milestone 3**
-- **Status: NOT YET STARTED**
+- **Target Completion: Q1 2022**
+- **Status: Development in Progress**
 
-In the final milestone, all Approved Hotspots on the Network will be converted
+Approved Hotspots on the Network will be converted
 to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent
 on Validators to generate challenges and process witness receipts.
 
-All Hotspots will not need to follow the Blockchain.
+Hotspots will not need to follow the Blockchain.
+
+Work on Milestone 4 has already started, please see **Path to Milestone 3 and 4** above.
 
