--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -17,7 +17,7 @@ and timeline are listed below.
 
 :::warning
 
-This project is in progress and subject to change. Last updated Monday September 27, 2021.
+This project is in progress and subject to change. **Last updated Monday September 27, 2021**.
 
 :::
 
@@ -42,7 +42,7 @@ Hotspots and onto Validators as of July 8, 2021**. This simplifies the architect
 us to grow the Network exponentially while keeping blocktimes and epochs stable.
 
 As all approved Hotspots transition to a Light Hotspot architecture, we also
-introduce a new type of Hotspot known as Data Only Hotspots (activated as of July 20, 2021) to satisfy the
+introduce a new type of Hotspot known as Data Only Hotspots, **activated as of July 20, 2021**, to satisfy the
 increasing demand and continue to expand network coverage.
 
 ## Light Hotspot Properties
@@ -96,8 +96,8 @@ milestones.
 
 #### Free Packet Forwarding
 
-- **Target Completion Date: March 18**
-- **Status: COMPLETE**
+- Target Completion Date: March 18
+- Status: COMPLETE
 
 At the completion of Milestone 1, any LoRaWAN gateways running
 [gateway-rs](https://github.com/helium/gateway-rs) can route packets to and from
@@ -109,8 +109,8 @@ as Data Only Hotspots.
 
 #### Add Hotspot to Blockchain
 
-- **Target Completion: early July**
-- **Status: COMPLETE**
+- Target Completion: early July
+- Status: COMPLETE
 
 At the completion of Milestone 1.5, Data Only Hotspots can be added to the
 blockchain, assert its location, and be seen on explorer.helium.com.
@@ -124,16 +124,17 @@ earn $HNT.
 
 #### Earn HNT For Device Packet Transfer
 
-- **Target Completion: Fall 2021**
-- **Status: Development In Progress**
+- Target Completion: Fall 2021
+- Status: Development In Progress
 
-Data Only Hotspots will earn $HNT for device data transfer.
+Data Only Hotspots will earn $HNT for device data transfer. A further breakdown of progress is outlined below:
+
 - server side updates for state_channels (complete)
 - gateway-rs will use a new rust-based state_channel client (in progress)
 - expected completion to be mid-October 2021
 
-#### Path to Milestone 3 and Milestone 4
-Developing in parallel with Milestone 2, the following work is also under development.
+### Path to Milestone 3 and Milestone 4
+Developing in parallel with Milestone 2, the following work is also under development. 
 
 - Change how Hotspots route data packets by replacing its state_channel client from erlang to rust, taking advantange of the improvements in gRPC and data streaming (in progress)
 - Update how Hotspots receive, emit, and acknowledge proof-of-coverage receipts from erlang to rust (in progress, targets milestone 4)
@@ -146,8 +147,8 @@ Developing in parallel with Milestone 2, the following work is also under develo
 
 #### Introduction of Light Hotspots
 
-- **Target Completion: Q1 2022**
-- **Status: Development in Progress/PoC work started**
+- Target Completion: Q1 2022
+- Status: Development in Progress/PoC work started
 
 Approved Hotspots from
 [HIP19-approved manufacturers](/mine-hnt/full-hotspots/#approved-makers) with
@@ -168,8 +169,8 @@ At this stage, there will be three types of Hotspots:
 
 #### All Approved Hotspots Operate as Light Hotspots
 
-- **Target Completion: Q1 2022**
-- **Status: Development in Progress**
+- Target Completion: Q1 2022
+- Status: Development in Progress
 
 Approved Hotspots on the Network will be converted
 to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent
