--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -92,9 +92,7 @@ Development of this code takes place in the above GitHub repo, as well at the
 The development of Light Hotspots will be broken up into the five following
 milestones.
 
-### Milestone 1
-
-#### Free Packet Forwarding
+### Milestone 1: Free Packet Forwarding
 
 - Target Completion Date: March 18
 - Status: COMPLETE
@@ -105,9 +103,7 @@ the Helium Network **but not earn HNT.** This means an DIY gateway can send and
 receive data on the Network. These LoRaWAN Gateways running Gateway-rs are known
 as Data Only Hotspots.
 
-### Milestone 1.5
-
-#### Add Hotspot to Blockchain
+### Milestone 1.5: Add Hotspot to Blockchain
 
 - Target Completion: early July
 - Status: COMPLETE
@@ -120,15 +116,14 @@ transaction fee, and a $5 Assert location transaction fee using the
 [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs) and will not
 earn $HNT.
 
-### Milestone 2
-
-#### Earn HNT For Device Packet Transfer
+### Milestone 2: Earn HNT For Device Packet Transfer
 
 - Target Completion: Fall 2021
 - Status: Development In Progress
 
 Data Only Hotspots will earn $HNT for device data transfer. A further breakdown of progress is outlined below:
 
+### Milestone Breakdown
 - server side updates for state_channels (complete)
 - gateway-rs will use a new rust-based state_channel client (in progress)
 - expected completion to be mid-October 2021
@@ -143,9 +138,7 @@ Developing in parallel with Milestone 2, the following work is also under develo
   - At this point, existing Hotspots no longer need to sync or absorb the blockchain, and will satisfy another property of Light Hotspot
   - Hotspots existing on-chain will be able to participate in Proof-of-Coverage, no longer need to syncronize the blockchain, and will require less computational power (Milestone 4)
 
-### Milestone 3
-
-#### Introduction of Light Hotspots
+### Milestone 3: Introduction of Light Hotspots
 
 - Target Completion: Q1 2022
 - Status: Development in Progress/PoC work started
@@ -165,9 +158,7 @@ At this stage, there will be three types of Hotspots:
 2. Light Hotspot (HIP-19 approved, earns HNT for PoC and Data Transfer)
 3. Data Only Hotspot (DIY LoRaWAN Gateway, earns HNT for Data Transfer)
 
-### Milestone 4
-
-#### All Approved Hotspots Operate as Light Hotspots
+### Milestone 4: "Heavy" Hotspots -> Light Hotspots
 
 - Target Completion: Q1 2022
 - Status: Development in Progress
