--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -123,12 +123,12 @@ earn $HNT.
 
 Data Only Hotspots will earn $HNT for device data transfer. A further breakdown of progress is outlined below:
 
-### Milestone Breakdown
+#### Milestone Breakdown
 - server side updates for state_channels (complete)
 - gateway-rs will use a new rust-based state_channel client (in progress)
 - expected completion to be mid-October 2021
 
-### Path to Milestone 3 and Milestone 4
+#### Path to Milestone 3 and Milestone 4
 Developing in parallel with Milestone 2, the following work is also under development. 
 
 - Change how Hotspots route data packets by replacing its state_channel client from erlang to rust, taking advantange of the improvements in gRPC and data streaming (in progress)
